<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:layout_height="match_parent"
    >

    <LinearLayout
        android:layout_marginTop="10dip"
        android:layout_width="match_parent"
        android:orientation="horizontal"
        android:id="@+id/linear_function"
        android:layout_height="50dp">
        <Button
            style="@null"
            android:text="@string/ConnectingBluetooth"
            android:textSize="12sp"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/btn_connectDevice"
            android:layout_weight="1" />

        <Button
            style="@null"
            android:text="@string/ScavengingList"
            android:textSize="12sp"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/clearDeviceData"
            android:layout_weight="1" />

        <Button
            style="@null"
            android:text="@string/ScavengingCanvas"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:textSize="12sp"
            android:id="@+id/clearCanvas"
            android:layout_weight="1" />
        <Button
            style="@null"
            android:text="@string/PointLineSwitching"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:textSize="12sp"
            android:id="@+id/pointCanvas"
            android:layout_weight="1" />
        <Button
            style="@null"
            android:text="@string/HiddenDisplay"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:textSize="12sp"
            android:id="@+id/btn_sendOrder"
            android:layout_weight="1" />
    </LinearLayout>

    <!---->
    <RelativeLayout
        android:id="@+id/relative_hide"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <com.ugee.ugcustomsketchpadlib.component.view.LcqDesignView
            android:id="@+id/customView"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />
        <!--or RecycleView -->
        <TextView
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:id="@+id/tv_show_pressure"
            style="@style/TextViewShowData"
            android:text="@string/pressureValue"
            />
        <TextView
            android:layout_below="@+id/tv_show_pressure"
            android:id="@+id/tv_show_deviceName"
            style="@style/TextViewShowData"
            android:text="@string/deviceName"
            />
        <TextView
            style="@style/TextViewShowData"
            android:text="@string/connectType"
            android:layout_below="@+id/tv_show_deviceName"
            android:id="@+id/tv_show_connectType"
            />
        <!--android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"-->
        <TextView
            style="@style/TextViewShowData"
            android:id="@+id/tv_show_init_view"
            android:text="@string/canvasType"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:textColor="@color/colorAccent"
            />

    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:layout_height="match_parent"
        >
        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/lv_lvBleData"
            android:visibility="gone"
            android:layout_width="match_parent"
            android:textSize="12sp"
            android:layout_height="match_parent">
        </androidx.recyclerview.widget.RecyclerView>
    </LinearLayout>

</LinearLayout>
