<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:background="@null"
    android:layout_height="match_parent"
    >

    <LinearLayout
        android:layout_marginTop="10dip"
        android:layout_width="match_parent"
        android:orientation="horizontal"
        android:id="@+id/linear_function"
        android:layout_height="50dp">
        <Button
            style="@null"
            android:text="@string/ConnectingBluetooth"
            android:textSize="12sp"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/btn_connectDevice"
            android:layout_weight="1" />

        <Button
            style="@null"
            android:text="@string/ScavengingList"
            android:textSize="12sp"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/clearDeviceData"
            android:layout_weight="1" />

        <Button
            style="@null"
            android:text="@string/ScavengingCanvas"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:textSize="12sp"
            android:id="@+id/clearCanvas"
            android:layout_weight="1" />
        <Button
            style="@null"
            android:text="@string/PointLineSwitching"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:textSize="12sp"
            android:id="@+id/pointCanvas"
            android:layout_weight="1" />
        <Button
            style="@null"
            android:text="@string/HiddenDisplay"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:textSize="12sp"
            android:id="@+id/btn_sendOrder"
            android:layout_weight="1" />
    </LinearLayout>
    <androidx.constraintlayout.widget.ConstraintLayout
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_below="@+id/linear_function"
        android:background="@null"
        android:layout_gravity="center"
        android:layout_width="wrap_content"
        android:layout_height="match_parent">
        <RelativeLayout
            android:background="@null"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layout_constraintDimensionRatio="w,22500:15000"
            >
            <com.ugee.ugcustomsketchpadlib.component.view.LcqDesignView
                android:id="@+id/customView"
                android:layout_width="match_parent"
                android:layout_height="match_parent" />
            <View
                android:layout_below="@+id/customView"
                android:background="@color/colorWhite"
                android:layout_width="match_parent"
                android:layout_height="match_parent"/>
        </RelativeLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
    <!---->
    <RelativeLayout
        android:id="@+id/relative_hide"
        android:background="@null"
        android:layout_below="@+id/linear_function"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <!--or RecycleView -->

        <TextView
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:id="@+id/tv_show_pressure"
            style="@style/TextViewShowData"
            android:text="@string/pressureValue"
            />
        <TextView
            android:layout_below="@+id/tv_show_pressure"
            android:id="@+id/tv_show_deviceName"
            style="@style/TextViewShowData"
            android:text="@string/deviceName"
            />
        <TextView
            style="@style/TextViewShowData"
            android:text="@string/connectType"
            android:layout_below="@+id/tv_show_deviceName"
            android:id="@+id/tv_show_connectType"
            />
        <!--android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"-->
        <TextView
            style="@style/TextViewShowData"
            android:id="@+id/tv_show_init_view"
            android:text="@string/canvasType"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:textColor="@color/colorAccent"
            />
    </RelativeLayout>

    <Button
        style="@null"
        android:id="@+id/btn_pen_add"
        android:text="@string/pen_width_add"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        android:layout_marginStart="20dp"
        android:layout_marginBottom="20dp"
        android:textSize="12sp"
        android:layout_width="wrap_content"
        android:layout_height="45dp"
        />
    <Button
        style="@null"
        android:id="@+id/btn_pen_delete"
        android:text="@string/pen_width_"
        android:layout_above="@+id/btn_pen_add"
        android:layout_marginStart="20dp"
        android:layout_marginBottom="5dp"
        android:textSize="12sp"
        android:layout_width="wrap_content"
        android:layout_height="45dp"
        />
    <TextView
        android:id="@+id/tvSelectBattery"
        android:text="@string/pen_width_"
        android:layout_marginEnd="20dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:layout_marginBottom="55dp"
        android:textSize="12sp"
        android:layout_width="wrap_content"
        android:layout_height="45dp"
        tools:ignore="RelativeOverlap" />
    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:layout_below="@+id/linear_function"
        android:layout_height="match_parent"
        >
        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/lv_lvBleData"
            android:visibility="gone"
            android:layout_width="match_parent"
            android:textSize="12sp"
            android:layout_height="match_parent">
        </androidx.recyclerview.widget.RecyclerView>
    </LinearLayout>

</RelativeLayout>
